--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <a href="https://drive.google.com/file/d/1xNzG8Zs6e9v1tkzwjeP0HA9iUErH8R1l/view">
+          <a href="https://drive.google.com/file/d/1wzOvh4OcmbL6NIEVymI6JbPASfEw5X1w/view?usp=sharing">
           <img class="img-fluid" src="img/Picture1.png" alt="1">
           </a>
         </div>
         <div class="carousel-item">
-          <a href="https://drive.google.com/file/d/1xNzG8Zs6e9v1tkzwjeP0HA9iUErH8R1l/view">
+          <a href="https://drive.google.com/file/d/1wzOvh4OcmbL6NIEVymI6JbPASfEw5X1w/view?usp=sharing">
           
           <img class="img-fluid" src="img/Picture2.png"  alt="1">
         </a>
         </div>
         <div class="carousel-item">
-          <a href="https://drive.google.com/file/d/1xNzG8Zs6e9v1tkzwjeP0HA9iUErH8R1l/view">
+          <a href="https://drive.google.com/file/d/1wzOvh4OcmbL6NIEVymI6JbPASfEw5X1w/view?usp=sharing">
           <img class="img-fluid" src="img/Picture3.png" alt="1">
         </a>
       </div>
